--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,10 +78,15 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="UpDownMovement",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="RightLeftMovement",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="UpDownMovement",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="RightLeftMovement",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="UpDownMovement",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="UpDownMovement",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="RightLeftMovement",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="RightLeftMovement",Scale=-1.000000,Key=Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
